--- a/frontend/index.html
+++ b/frontend/index.html
@@ -170,7 +170,8 @@
 </body>
 <script>
 
-    const baseServerURL = `https://teal-crowded-mackerel.cyclic.app`;
+    const baseServerURL = `http://localhost:4400`
+    // const baseServerURL = `https://teal-crowded-mackerel.cyclic.app`;
 
 
 
@@ -196,11 +197,11 @@
     let body_add = document.getElementById("body-add");
     let sub_add = document.getElementById("sub-add");
     let submitBtn_add = document.getElementById("submitbtn-add");
-    
+
     //Delete
     let noteid_delete = document.getElementById("noteid-delete");
     let submitBtn_delete = document.getElementById("submitbtn-delete");
-    
+
     //Update
     let title_update = document.getElementById("title-update");
     let body_update = document.getElementById("body-update");
