--- a/frontend/LoginPage.html
+++ b/frontend/LoginPage.html
@@ -103,8 +103,8 @@
 </body>
 <script>
 
-
-    const baseServerURL = `https://teal-crowded-mackerel.cyclic.app`;
+const baseServerURL = `http://localhost:4400`
+    // const baseServerURL = `https://teal-crowded-mackerel.cyclic.app`;
 
 
 
